--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ section {
   border-radius: 4px;
   color: var(--color-lotion);
   margin: 40px auto 0;
-  max-width: 35;
+  max-width: 35%;
   padding: 16px;
 }
 
