--- a/style.css
+++ b/style.css
@@ -39,7 +39,8 @@ section {
   border-radius: 4px;
   color: var(--color-lotion);
   margin: 40px auto 0;
-  max-width: 30%;
+  max-width: calc(680px - calc(2 * 10px));
+  width: 90%;
   padding: 16px;
 }
 
